<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.android.tripbook.ui.home.HomeFragment"
        android:label="@string/discover_your_next_adventure"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_hotelDetailFragment"
            app:destination="@id/hotelDetailFragment">
            <argument
                android:name="hotelId"
                app:argType="string" />

        </action>

        <action
            android:id="@+id/action_homeFragment_to_serviceListingFragment"
            app:destination="@id/serviceListingFragment">
            <argument
                android:name="searchQuery"
                app:argType="string"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/serviceListingFragment"
        android:name="com.android.tripbook.ui.listing.ServiceListingFragment"
        android:label="@string/fragment_service_listing_label"
        tools:layout="@layout/fragment_service_listing">

        <argument
            android:name="searchQuery"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

        <action
            android:id="@+id/action_serviceListingFragment_to_serviceDetailFragment"
            app:destination="@id/serviceDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/serviceDetailFragment"
        android:name="com.android.tripbook.ui.detail.ServiceDetailFragment"
        android:label="@string/fragment_service_detail_label"
        tools:layout="@layout/fragment_service_detail">

        <argument
            android:name="serviceId"
            app:argType="string" />

        <action
            android:id="@+id/action_serviceDetailFragment_to_bookingConfirmationFragment"
            app:destination="@id/bookingConfirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookingConfirmationFragment"
        android:name="com.android.tripbook.ui.booking.BookingConfirmationFragment"
        android:label="@string/fragment_booking_confirmation_label"
        tools:layout="@layout/fragment_booking_confirmation">

        <argument
            android:name="serviceId"
            app:argType="string" />

        <action
            android:id="@+id/action_bookingConfirmationFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.android.tripbook.ui.profile.ProfileFragment"
        android:label="@string/fragment_profile_label"
        tools:layout="@layout/fragment_profile" />




</navigation>